[project]
name = "Personal Finance Monitor"
version = "0.1.0"
description = "This is a web application designed to help users track, visualize, and understand their income and expenses."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "psycopg2>=2.9.10",
    "requests>=2.32.5",
    "streamlit>=1.50.0",
    "streamlit-modal>=0.1.2",
]
